# exhibit-a

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: exhibit-repro.yml
action/: post_receipt.py
demo/: demo.cast
examples/: sample_candidates.json  sample_candidates_unreproducible.json  sample_issue.md  sample_plan.json  sample_plan_slugify.json  sample_receipt_confirmed.md  sample_receipt_unreproducible.md
examples/buggy_calc/: .exhibit.toml  pyproject.toml
examples/buggy_calc/buggy_calc/: __init__.py
exhibit_a/: __init__.py  action_post.py  cli.py  extract.py  llm.py  pipeline.py  runner.py  schemas.py  selfcheck.py  sourcepick.py  stage.py  synthesize.py  validate.py  verdict.py
tests/: test_action_post.py  test_config.py  test_engine_e2e.py  test_gates.py  test_junit_parser.py  test_llm_stages.py  test_runner.py  test_schemas.py  test_selfcheck.py  test_verdict.py
