[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "exhibit-a-bot"
version = "0.1.0"
description = "Every bug report gets a failing test attached — or a receipt showing why it couldn't be reproduced."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Dhanush Musunuru" }]
keywords = ["bug-reproduction", "triage", "failing-test", "maintainers", "github-action"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]
# The deterministic core has ZERO runtime dependencies. That's deliberate:
# the part of the tool that decides CONFIRMED/UNREPRODUCIBLE should be
# auditable without downloading half of PyPI.
dependencies = []

[project.optional-dependencies]
# The LLM stages (extract, synthesize) are optional — you can drive the
# validation engine with a hand-written plan and never touch an API.
llm = ["anthropic>=0.40"]
dev = ["pytest>=8"]

[project.scripts]
exhibit = "exhibit_a.cli:main"

[tool.setuptools.packages.find]
include = ["exhibit_a*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
